# hmw6

./: connect.py  create_tables_vol1.sql  migration.py  pyproject.toml  requests.sql
