[tool.poetry]
name = "lec2"
version = "0.1.0"
description = ""
authors = ["TimurVerba <135266210+TimurVerba@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
